--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
         var userStreams = streams.users;
         var currentUser = "";
 
-        var userGenerated = function(){
+        function getUser(){
+          for (var x in userStreams[currentUser]){
+            return userStreams[currentUser][x]['user'];
+          }
+        }
+
+        function userGenerated(){
           var arr = [];
                   for (var x in userStreams[currentUser]){
-                    arr.unshift('<div class="tweetwrapper">'+'@'+userStreams[currentUser][x]['user'] + ' ' +userStreams[currentUser][x]['message']+'</div>')
+                    arr.unshift('<div class="tweetwrapper"><a class="indy-tweet-user">'+'@'+userStreams[currentUser][x]['user'] + '</a>' + ' ' + '<div class="indy-tweet-timestamp">' + userStreams[currentUser][x]['created_at']+ '</div>' + ' ' + '<div class="indy-tweet">' + userStreams[currentUser][x]['message']+'</div></div>')
                   }
-                  return arr;
+                  return arr.join(" ");
               };
 
 
@@ -49,8 +55,8 @@
             // $tweetuser.attr("href", tweet.user).text('@' + tweet.user);
             $tweetuser.text('@' + tweet.user).attr("href", '#').click(function(){
               currentUser = tweet.user;}).click(function(){
-              var tweetModal = '<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title" id="myModalLabel">Modal title</h4></div><div class="modal-body"><div class="tweetwrapper">' + userGenerated() + 
-              '</div></div><div class="modal-footer"><button type="button" class="btn btn-default" data-dismiss="modal">Close</button><button type="button" class="btn btn-primary">Save changes</button></div></div></div></div>';
+              var tweetModal = '<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title" id="myModalLabel"> @'+ getUser() +'\'s tweets</h4></div><div class="modal-body">' + userGenerated() + 
+              '</div><div class="modal-footer"><button type="button" class="btn btn-default" data-dismiss="modal">Close</button></div></div></div></div>';
 
               $('body').prepend(tweetModal);
             }).attr("data-target", '#myModal');
